<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="32dp">

    <Button
        android:id="@+id/product"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:text="@string/product"
        android:layout_margin="8dp"
        android:textSize="16dp"
        android:background="@drawable/style_button_large"/>

    <Button
        android:id="@+id/Employee"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:text="@string/employee"
        android:layout_margin="8dp"
        android:textSize="16dp"
        android:background="@drawable/style_button_large"/>

    <Button
        android:id="@+id/addAdmin"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:text="@string/add_admin"
        android:layout_margin="8dp"
        android:textSize="16dp"
        android:background="@drawable/style_button_large"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="end|bottom"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="132dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/style_button_logout"
        android:text="Logout"
        android:textSize="16dp" />
</LinearLayout>